--- a/index.html
+++ b/index.html
@@ -4,23 +4,43 @@
         <meta charset="utf-8">
         <link rel="icon" type="image/png" sizes="32x23" href="icon.png">
         <title>Calming Violet – Organic Plants & Seeds</title>
-        <meta name="description" content="I am the flower. Sometimes, I am the rain">
-
+        <meta name="description" content="Organically grown plant shop based in Richmond, VA. Free delivery within 60 miles.">
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
+        <div class="full-wrap">
         <header>
-
+            <h1>
+                Calming Violet
+            </h1>
+            <nav>
+                <a class="about" href="about.html">About</a>
+            </nav>
         </header>
         
     
-        <section class="">
+        <main class="center-wrap">
 
+            <section class="content">
+            <ul>
+             <li><a class="showlibrary" href="www.twitter.com">Plants</a></li>
+             <li><a>Seeds</a></li>
+             <li><a>Things</a></li>
+             <li><a>Holiday</a></li>
+            </ul>
         </section>
 
+    </main>
+        <img class="flower_1" src="assets/flower_1.jpg" style="display: none;">
+        <img class="flower_2" src="assets/flower_2.jpg" style="display: none;">
+        <img class="flower_3" src="assets/flower_3.jpg" style="display: none;">
 
         <footer>
-
+            <nav>
+            <a href=mailto:"shopcalmingviolet@gmail.com">Contact</a>
+            </nav>
+            <img class="plant-icon" src="assets/plant.png">
         </footer>
 
+        </div>
     </body>
