building out pages, layouts

--- a/index.html
+++ b/index.html
@@ -1,46 +1,80 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <link rel="icon" type="image/png" sizes="32x23" href="icon.png">
-        <title>Calming Violet – Organic Plants & Seeds</title>
-        <meta name="description" content="Organically grown plant shop based in Richmond, VA. Free delivery within 60 miles.">
-        <link href="style.css" rel="stylesheet">
-    </head>
-    <body>
-        <div class="full-wrap">
-        <header>
-            <h1>
-                Calming Violet
-            </h1>
-            <nav>
-                <a class="about" href="about.html">About</a>
-            </nav>
-        </header>
-        
-    
-        <main class="center-wrap">
+<head>
+  <meta charset="utf-8">
 
-            <section class="content">
-            <ul>
-             <li><a class="showlibrary" href="www.twitter.com">Plants</a></li>
-             <li><a>Seeds</a></li>
-             <li><a>Things</a></li>
-             <li><a>Holiday</a></li>
-            </ul>
-        </section>
+  <title>Calming Violet</title>
+  <meta name="description" content="The portfolio of Claire Pedersen">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    </main>
-        <img class="flower_1" src="assets/flower_1.jpg" style="display: none;">
-        <img class="flower_2" src="assets/flower_2.jpg" style="display: none;">
-        <img class="flower_3" src="assets/flower_3.jpg" style="display: none;">
+  <link rel="icon" href="img/favicon.ico" />
 
-        <footer>
-            <nav>
-            <a href=mailto:"shopcalmingviolet@gmail.com">Contact</a>
-            </nav>
-            <img class="plant-icon" src="assets/plant.png">
-        </footer>
+  <link rel="stylesheet" href="css/style.css">
 
-        </div>
-    </body>
+  <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+
+  <meta property="og:site_name" content="Calming Violet" />
+  <meta property="og:title" content="Calming Violet" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Organically grown plant shop based in Richmond, VA. Free delivery within 60 miles." />
+  <meta property="og:url" content="http://calmingviolet.com/" /> 
+
+  <!-- MAKE AN IMAGE THATS 1200 X 630. USE FULL IMG URL -->
+  <meta property="og:image" content="http://calmingviolet.com/assets/social.jpg" />
+  
+  <meta name="twitter:card" content="Calming Violet">
+  <meta name="twitter:site" content="@calming_violet">
+  <meta name="twitter:creator" content="@calming_violet">
+  <meta name="twitter:title" content="Calming Violet">
+  <meta name="twitter:description" content="Calming Violet - Organic Plants & Seeds">
+  <meta name="twitter:image" content="http://calmingviolet.com/assets/social.jpg">
+
+</head>
+
+<body class="home"> 
+  <div class="full-wrap">
+  
+    <header>
+      <h1>
+        <a href="index.html">Calming Violet</a>
+      </h1>
+      <nav>
+        <a class="help" href="about.html">About</a>
+      </nav>
+      <div style="clear: both;"></div>
+    </header>
+
+    <div class="center-wrap">
+      <div class="hero">
+        <ul>
+            <li><a class="showplants" href="www.twitter.com">Plants</a></li>
+            <li><a class="showseeds" href="www.twitter.com">Seeds</a></li>
+            <li><a class="showthings" href="www.twitter.com">Things</a></li>
+            <li><a class="showholiday" href="www.twitter.com">Holiday</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <img class="plants" src="assets/flower_1.jpg" style="display: none;">
+    <img class="seeds" src="assets/flower_2.jpg" style="display: none;">
+    <img class="things" src="assets/flower_3.jpg" style="display: none;">
+    <img class="holiday" src="assets/flower_3.jpg" style="display: none;">
+
+
+    <footer>
+        <nav>
+        <a href=mailto:"shopcalmingviolet@gmail.com">Contact</a>
+        </nav>
+        <img class="plant-icon" src="assets/instagram.png">
+    </footer>
+
+  </div>
+</body>
+  <script src="https://code.jquery.com/jquery-latest.js"></script>
+  <script src="js/featherlight.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js/featherlight.gallery.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js/scripts.js"></script>
+</html>
