fixed image and section naming

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>Calming Violet</title>
-  <meta name="description" content="The portfolio of Claire Pedersen">
+  <meta name="description" content="Calming Violet - Organic Plants & Seeds">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="icon" href="img/favicon.ico" />
@@ -58,17 +58,17 @@
       </div>
     </div>
 
-    <img class="plants" src="assets/flower_1.jpg" style="display: none;">
-    <img class="seeds" src="assets/flower_2.jpg" style="display: none;">
-    <img class="things" src="assets/flower_3.jpg" style="display: none;">
-    <img class="holiday" src="assets/flower_3.jpg" style="display: none;">
+    <img class="plants" src="assets/plants.jpg" style="display: none;">
+    <img class="seeds" src="assets/seeds.jpg" style="display: none;">
+    <img class="things" src="assets/things.jpg" style="display: none;">
+    <img class="holiday" src="assets/things.jpg" style="display: none;">
 
 
     <footer>
         <nav>
-        <a href=mailto:"shopcalmingviolet@gmail.com">Contact</a>
+        <a href="mailto:shopcalmingviolet@gmail.com">Contact</a>
         </nav>
-        <img class="plant-icon" src="assets/instagram.png">
+        <a href="https://www.instagram.com/calming_violet" target="_blank"><img src="assets/instagram.png"></a>
     </footer>
 
   </div>
