fix links, add favicon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Calming Violet - Organic Plants & Seeds">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="icon" href="img/favicon.ico" />
+  <link rel="icon" href="assets/favicon.ico" />
 
   <link rel="stylesheet" href="css/style.css">
 
@@ -50,10 +50,10 @@
     <div class="center-wrap">
       <div class="hero">
         <ul>
-            <li><a class="showplants" href="www.twitter.com">Plants</a></li>
-            <li><a class="showseeds" href="www.twitter.com">Seeds</a></li>
-            <li><a class="showthings" href="www.twitter.com">Things</a></li>
-            <li><a class="showholiday" href="www.twitter.com">Holiday</a></li>
+            <li><a class="showplants" href="#">Plants</a></li>
+            <li><a class="showseeds" href="#">Seeds</a></li>
+            <li><a class="showthings" href="#">Things</a></li>
+            <li><a class="showholiday" href="#">Holiday</a></li>
         </ul>
       </div>
     </div>
