started to add Plants page and cleaned up font size

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     <div class="center-wrap">
       <div class="hero">
         <ul>
-            <li><a class="showplants" href="#">Plants</a></li>
-            <li><a class="showseeds" href="#">Seeds</a></li>
-            <li><a class="showthings" href="#">Things</a></li>
-            <li><a class="showholiday" href="#">Holiday</a></li>
+            <li><a class="showplants" href="plants.html">Plants</a></li>
+            <li><a class="showseeds" href="seeds.html">Seeds</a></li>
+            <li><a class="showthings" href="things.html">Things</a></li>
+            <li><a class="showholiday" href="holiday.html">Holiday</a></li>
         </ul>
       </div>
     </div>
