--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
       <div class="info">
         <h3>
         <p>I’m <a class= "showbecci">Becci</a>, your neighborhood plant friend.</p>
-        <p>This is just getting started and is most certianly a&nbsp; <a class="showoffice">WIP</a>.</p>
+        <p>This is just getting started and is most certainly a&nbsp; <a class="showoffice">WIP</a>.</p>
         <p>Where to find me in the meantime? <br> A few goodies get dropped off at Ashby in Carytown twice a month.</p>
         <p>Or, just send me a note <a id="noline" class="animate wobble" href="mailto:shopcalmingviolet@gmail.com"> ✉️ </a></p>
         </h3>
