--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
   <meta name="twitter:description" content="Calming Violet - Organic Plants & Seeds">
   <meta name="twitter:image" content="http://calmingviolet.com/assets/social.jpg">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141579461-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-141579461-1');
+  </script>
+
+
 </head>
 
 <body class="home"> 
